# faiss-build

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
cmake/: default_config.cmake
patch/: cmake_python_module.patch
python/: CMakeLists.txt
scripts/: before_Linux.sh  before_Windows.sh  before_macOS.sh  install_Linux.sh  install_OpenBLAS.ps1  install_OpenBLAS_Windows.sh  install_Windows.ps1  install_macOS.sh  rename_project.sh
