[project]
name = "faiss-cpu"
version = "1.12.0"
description = "A library for efficient similarity search and clustering of dense vectors."
readme = "README.md"
authors = [
    { name = "Kota Yamaguchi", email = "yamaguchi_kota@cyberagent.co.jp" }
]
requires-python = ">=3.9,<3.15"
keywords = ["faiss", "similarity search", "clustering", "machine learning"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.25.0,<3.0", "packaging"]

[build-system]
requires = ["scikit-build-core>=0.10", "swig", "numpy>=2.0,<3.0"]
build-backend = "scikit_build_core.build"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["third-party/faiss/tests"]
python_files = "test_*.py"  # torch_test_*.py will break the other tests.
addopts = [
    # Failing tests for numerical issues.
    "--deselect=third-party/faiss/tests/test_local_search_quantizer.py::TestProductLocalSearchQuantizer::test_lut",
    "--deselect=third-party/faiss/tests/test_local_search_quantizer.py::TestComponents::test_update_codebooks_with_double",
    "--deselect=third-party/faiss/tests/test_contrib.py::TestPreassigned::test_float",
    "--deselect=third-party/faiss/tests/test_contrib.py::TestClustering::test_ivf_train_2level",
]

[tool.cibuildwheel]
archs = "native"
skip = "cp39-win_arm64 cp310-win_arm64"
test-requires = ["pytest", "scipy"]
test-command = "pytest {project}/third-party/faiss/tests"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -v -w {dest_dir} {wheel}"
test-requires = ["pytest"]
# Disable scipy tests on Windows.
test-command = """
pytest {project}/third-party/faiss/tests/ \
    --ignore={project}/third-party/faiss/tests/test_contrib_with_scipy.py \
    --ignore={project}/third-party/faiss/tests/test_extra_distances.py \
    --ignore={project}/third-party/faiss/tests/test_residual_quantizer.py
"""