[project]
name = "faiss-cpu"
version = "1.12.0"
description = "A library for efficient similarity search and clustering of dense vectors."
readme = "README.md"
authors = [
    { name = "Kota Yamaguchi", email = "yamaguchi_kota@cyberagent.co.jp" }
]
requires-python = ">=3.9,<3.15"
keywords = ["faiss", "similarity search", "clustering", "machine learning"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.25.0,<3.0", "packaging"]

[build-system]
requires = ["scikit-build-core>=0.10", "swig>=3.0.12", "numpy>=2.0,<3.0"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = ["pytest>=8.4.1", "scipy>=1.13.1"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["third-party/faiss/tests"]
python_files = "test_*.py"  # torch_test_*.py will break the other tests.
addopts = [
    # Failing tests for numerical issues.
    "--deselect=third-party/faiss/tests/test_local_search_quantizer.py::TestProductLocalSearchQuantizer::test_lut",
    "--deselect=third-party/faiss/tests/test_local_search_quantizer.py::TestComponents::test_update_codebooks_with_double",
    "--deselect=third-party/faiss/tests/test_contrib.py::TestPreassigned::test_float",
    "--deselect=third-party/faiss/tests/test_contrib.py::TestClustering::test_ivf_train_2level",
]

[tool.scikit-build]
cmake.build-type = "Release"
# NOTE: You may set CMAKE_GENERATOR_TOOLSET=ClangCL on Windows, but results in broken DLLs on ARM64.

[[tool.scikit-build.overrides]]
if.platform-system = "^(darwin|linux)"  # NOTE: Windows ABI3 results in broken DLLs.
if.abi-flags = "^$"  # NOTE: Free-threaded Python does not support stable ABI.
wheel.py-api = "cp39"

[tool.cibuildwheel]
archs = "native"
# NOTE: We do not support cp39 and cp310 on Windows ARM64
# NOTE: cp3*t-win issue: https://gitlab.kitware.com/cmake/cmake/-/issues/26926
# NOTE: cp3*t does not support stable API and we skip them for now.
skip = "cp39-win_arm64 cp310-win_arm64 cp3*t-*"
test-requires = ["pytest", "scipy"]
test-command = "pytest {project}/third-party/faiss/tests"

[[tool.cibuildwheel.overrides]]
# Skip scipy tests for platforms not supporting binary wheels.
select = "cp39-musllinux_aarch64 *-win_arm64"
test-requires = ["pytest"]
test-command = """
pytest {project}/third-party/faiss/tests/ \
    --ignore={project}/third-party/faiss/tests/test_contrib_with_scipy.py \
    --ignore={project}/third-party/faiss/tests/test_extra_distances.py \
    --ignore={project}/third-party/faiss/tests/test_residual_quantizer.py
"""

[tool.cibuildwheel.linux]
# NOTE: Linux needs a setup from before-all hook, because they are inside containers.
before-all = "bash scripts/install_Linux.sh"
# TODO: Skip abi3audit when wheel.py-api is not set.
repair-wheel-command = [
    "auditwheel show {wheel}",
    "auditwheel repair -w {dest_dir} {wheel}",
    "pipx run abi3audit --strict --report {wheel}"
]

[tool.cibuildwheel.macos]
# TODO: Skip abi3audit when wheel.py-api is not set.
repair-wheel-command = [
    "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
    "pipx run abi3audit --strict --report {wheel}"
]

[tool.cibuildwheel.windows]
repair-wheel-command = ["pipx run delvewheel repair -v -w {dest_dir} {wheel}"]
